--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/blue_800" />
+        android:background="@color/blue_grey_800_overlay" />
 
     <LinearLayout
         android:layout_width="330dp"
