preview of sign sale screen and list sales

--- a/app/src/main/res/layout/fragment_add_sale.xml
+++ b/app/src/main/res/layout/fragment_add_sale.xml
@@ -5,13 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <include layout="@layout/toolbar" />
-
-    </com.google.android.material.appbar.AppBarLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -36,7 +32,7 @@
                     android:id="@+id/act_product"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Produto"
+                    android:hint="@string/act_products"
                     android:maxLines="1"
                     android:singleLine="true"/>
 
@@ -54,7 +50,7 @@
                     android:id="@+id/act_client"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Cliente"
+                    android:hint="@string/act_client"
                     android:maxLines="1"
                     android:singleLine="true" />
 
@@ -78,11 +74,89 @@
                         android:id="@+id/act_qty"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Quantidade"
+                        android:hint="@string/act_qty"
                         android:maxLines="1"
                         android:singleLine="true"
-                        android:inputType="number"
-                        android:text="0" />
+                        android:inputType="number" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="@dimen/spacing_mlarge" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/act_total"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/act_total_sale"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:inputType="number" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="@dimen/spacing_mlarge" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/act_installments"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/act_number_sales_installments"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:inputType="number"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="@dimen/spacing_mlarge" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/act_installments"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/act_value_to_pay_sales_installments"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:inputType="numberDecimal" />
 
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
@@ -105,7 +179,7 @@
                         android:id="@+id/act_pay_type"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Método de Pagamento"
+                        android:hint="@string/act_pay_method"
                         android:maxLines="1"
                         android:singleLine="true"
                         android:inputType="text" />
@@ -134,7 +208,7 @@
                         android:drawableEnd="@drawable/ic_arrow_drop_grey"
                         android:drawableRight="@drawable/ic_arrow_drop_grey"
                         android:editable="false"
-                        android:hint="Data"
+                        android:hint="@string/act_date_picker"
                         android:focusable="false"
                         android:maxLines="1"
                         android:singleLine="true"
@@ -142,6 +216,19 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="@dimen/spacing_mlarge" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/checkbox_sign"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="@string/use_same_signature"
+                android:ellipsize="end"
+                android:checked="false"/>
 
             <View
                 android:layout_width="0dp"
@@ -155,7 +242,7 @@
                 android:layout_marginLeft="-4dp"
                 android:layout_marginRight="-4dp"
                 android:background="@drawable/btn_rect_primary"
-                android:text="Processar"
+                android:text="@string/btn_process_sale"
                 android:textAllCaps="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@android:color/white" />
