--- a/app/src/main/res/layout/item_product_card.xml
+++ b/app/src/main/res/layout/item_product_card.xml
@@ -85,6 +85,7 @@
                     android:numStars="5"
                     android:rating="3.5"
                     android:stepSize="1"
+                    android:visibility="invisible"
                     android:theme="@style/Yellow.Small.AppCompatRatingBar" />
 
                 <View
