--- a/app/src/main/res/layout/fragment_add_sale.xml
+++ b/app/src/main/res/layout/fragment_add_sale.xml
@@ -42,19 +42,38 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/spacing_mlarge" />
 
-            <com.google.android.material.textfield.TextInputLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-                <AutoCompleteTextView
-                    android:id="@+id/act_client"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/text_input_username"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/act_client"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    android:layout_height="wrap_content">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <AutoCompleteTextView
+                        android:id="@+id/act_client"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/act_client"
+                        android:maxLines="1"
+                        android:singleLine="true"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageView
+                    android:id="@+id/iv_add_client"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:padding="5dp"
+                    android:paddingRight="10dp"
+                    android:paddingEnd="10dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    app:srcCompat="@drawable/ic_add"/>
+            </RelativeLayout>
 
             <View
                 android:layout_width="0dp"
@@ -83,11 +102,13 @@
             </LinearLayout>
 
             <View
+                android:visibility="gone"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/spacing_mlarge" />
 
 
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -110,10 +131,12 @@
             </LinearLayout>
 
             <View
+                android:visibility="gone"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/spacing_mlarge" />
 
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -136,10 +159,12 @@
             </LinearLayout>
 
             <View
+                android:visibility="gone"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/spacing_mlarge" />
 
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -227,8 +252,16 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:text="@string/use_same_signature"
+                android:visibility="gone"
                 android:ellipsize="end"
                 android:checked="false"/>
+
+            <ProgressBar
+                android:id="@+id/pb_loading"
+                android:visibility="gone"
+                android:indeterminate="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
             <View
                 android:layout_width="0dp"
