--- a/app/src/main/res/menu/menu_product_more.xml
+++ b/app/src/main/res/menu/menu_product_more.xml
@@ -3,19 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:icon="@drawable/ic_add"
+        android:iconTint="#000"
         android:id="@+id/action_details"
         android:orderInCategory="100"
-        android:title="Details"
+        android:title="Adicionar Inquerito"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/action_cart"
-        android:orderInCategory="100"
-        android:title="Add to Cart"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_share"
-        android:orderInCategory="100"
-        android:title="Share"
-        app:showAsAction="never" />
+
 
 </menu>
