--- a/app/src/main/res/layout/item_product_card.xml
+++ b/app/src/main/res/layout/item_product_card.xml
@@ -43,8 +43,8 @@
                     android:id="@+id/title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
                     android:layout_marginTop="@dimen/spacing_xmedium"
+                    android:layout_weight="2"
                     android:text="Product Name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/grey_90" />
@@ -55,11 +55,36 @@
                     android:layout_height="@dimen/spacing_xlarge"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:tint="@color/grey_40"
+                    android:visibility="gone"
                     app:srcCompat="@drawable/ic_more_vert" />
 
                 <View
                     android:layout_width="@dimen/spacing_small"
                     android:layout_height="0dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <View
+                    android:layout_width="@dimen/spacing_middle"
+                    android:layout_height="0dp" />
+
+                <TextView
+                    android:id="@+id/category"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_xmedium"
+                    android:layout_weight="2"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="ggg"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/grey_90" />
 
             </LinearLayout>
 
@@ -69,42 +94,23 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_gravity="end|bottom"
+                android:paddingHorizontal="2dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <View
-                    android:layout_width="@dimen/spacing_middle"
-                    android:layout_height="0dp" />
-
-                <androidx.appcompat.widget.AppCompatRatingBar
-                    style="@style/Yellow.Small.AppCompatRatingBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="false"
-                    android:numStars="5"
-                    android:rating="3.5"
-                    android:stepSize="1"
-                    android:visibility="invisible"
-                    android:theme="@style/Yellow.Small.AppCompatRatingBar" />
-
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1" />
 
                 <TextView
+                    android:gravity="end"
+                    android:paddingHorizontal="10dp"
                     android:id="@+id/price"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="$ 80.00"
+                    android:text="0MT"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold" />
-
-                <View
-                    android:layout_width="@dimen/spacing_middle"
-                    android:layout_height="0dp" />
 
             </LinearLayout>
 
